Cardápio iniciado, falta coisa

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <p>Este é meu primeiro<strong>repositório</strong>!</p>
     <button> Mostrar mensagem </button>
 
+    <h2>Cardápio</h2>
+    <p>Sushi com linquiça</p>
+
 </body>
 </html>
